--- a/STW/UserSettings/Search.settings
+++ b/STW/UserSettings/Search.settings
@@ -13,6 +13,9 @@ scopes = {
 	"last_search.EAB0C2BA" = "2d platform"
 	"OpenInspectorPreview.EAB0C2BA" = "0"
 	"currentGroup.EAB0C2BA" = "all"
+	"last_search.DD5CDD96" = ""
+	"OpenInspectorPreview.DD5CDD96" = "0"
+	"currentGroup.DD5CDD96" = "scene"
 }
 providers = {
 	adb = {
